--- a/app/src/main/res/layout/activity_cadastar_livro.xml
+++ b/app/src/main/res/layout/activity_cadastar_livro.xml
@@ -7,13 +7,13 @@
     tools:context="com.thiagoyf.lembretedeleituradelivros.CadastrarLivroActivity">
 
     <LinearLayout
+        android:layout_margin="@dimen/activity_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/CustomTextView"
             android:text="@string/cadastrarLivro_txtNome" />
 
         <EditText
@@ -24,8 +24,7 @@
             android:hint="@string/cadastrarLivro_hintNome" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/CustomTextView"
             android:text="@string/cadastrarLivro_txtTotalDePaginas" />
 
         <EditText
@@ -33,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:digits="1234567890"
+            android:inputType="number"
             android:hint="@string/cadastrarLivro_hintTotalDePaginas" />
 
         <Button
