--- a/app/src/main/res/layout/activity_cadastar_livro.xml
+++ b/app/src/main/res/layout/activity_cadastar_livro.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_cadastrar_livro"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.thiagoyf.lembretedeleituradelivros.CadastrarLivroActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_margin="@dimen/activity_margin"
+        android:layout_margin="@dimen/custom_dimen_10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -25,7 +22,7 @@
 
         <TextView
             style="@style/CustomTextView"
-            android:text="@string/cadastrarLivro_txtTotalDePaginas" />
+            android:text="@string/cadastrarLivro_txtTotalPaginas" />
 
         <EditText
             android:id="@+id/cadastrarLivro_edtTotalDePaginas"
@@ -33,11 +30,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:inputType="number"
-            android:hint="@string/cadastrarLivro_hintTotalDePaginas" />
+            android:hint="@string/cadastrarLivro_hintTotalPaginas" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="cadastrarLivro"
             android:text="@string/cadastrarLivro_btnCadastrar" />
     </LinearLayout>
 
