--- a/app/src/main/res/layout/activity_listar_livros.xml
+++ b/app/src/main/res/layout/activity_listar_livros.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_listar_livros"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.thiagoyf.lembretedeleituradelivros.ListarLivrosActivity">
+    android:layout_height="match_parent" >
 
-</RelativeLayout>
+    <ListView
+        android:id="@+id/listarLivros_listaDeLivros"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="#000000"
+        android:dividerHeight="2dp">
+
+    </ListView>
+</LinearLayout>
