--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,12 +33,13 @@
             android:onClick="onClick"
             android:text="@string/main_btnCadastroDeLembretes" />
 
+        <!--
         <Button
             android:id="@+id/main_btnListaDeLembretes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
-            android:text="@string/main_btnListarLembretes" />
+            android:text="@string/main_btnListarLembretes" /> -->
 
     </LinearLayout>
 
