--- a/app/src/main/res/layout/activity_cadastar_livro.xml
+++ b/app/src/main/res/layout/activity_cadastar_livro.xml
@@ -4,10 +4,23 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_margin="@dimen/custom_dimen_10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/custom_dimen_10dp"
         android:orientation="vertical">
+
+        <TextView
+            style="@style/CustomTextView"
+            android:text="@string/cadastrarLivro_txtCapaLivro"/>
+
+        <ImageView
+            android:id="@+id/cadastrarLivro_imgLivro"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_gravity="center"
+            android:background="@mipmap/ic_launcher"
+            android:onClick="pegaImagem"
+            android:layout_width="100dp"
+            android:layout_height="160dp" />
 
         <TextView
             style="@style/CustomTextView"
@@ -29,8 +42,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:inputType="number"
-            android:hint="@string/cadastrarLivro_hintTotalPaginas" />
+            android:hint="@string/cadastrarLivro_hintTotalPaginas"
+            android:inputType="number" />
 
         <Button
             android:layout_width="match_parent"
