--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,13 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="custom_dimen_10dp">10dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Dimensões personalizadas -->
+    <dimen name="custom_dimen_10dp">10dp</dimen>
+    <dimen name="image_dimen_50dp">50dp</dimen>
+    <dimen name="image_dimen_80dp">80dp</dimen>
+    <dimen name="image_dimen_100dp">100dp</dimen>
+    <dimen name="image_dimen_160dp">160dp</dimen>
+
 </resources>
