--- a/app/src/main/res/layout/activity_cadastar_livro.xml
+++ b/app/src/main/res/layout/activity_cadastar_livro.xml
@@ -7,6 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/custom_dimen_10dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="vertical">
 
         <TextView
@@ -17,7 +19,6 @@
             android:id="@+id/cadastrarLivro_imgLivro"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_gravity="center"
-            android:background="@mipmap/ic_launcher"
             android:onClick="pegaImagem"
             android:layout_width="100dp"
             android:layout_height="160dp" />
@@ -31,7 +32,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:hint="@string/cadastrarLivro_hintNome" />
+            android:hint="@string/cadastrarLivro_hintNome"
+            android:inputType="text"/>
 
         <TextView
             style="@style/CustomTextView"
