--- a/app/src/main/res/layout/livro.xml
+++ b/app/src/main/res/layout/livro.xml
@@ -2,15 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:gravity="center"
+    android:orientation="horizontal"
     android:padding="@dimen/custom_dimen_10dp">
 
-    <TextView
-        style="@style/CustomTextView"
-        android:id="@+id/livro_nome" />
 
-    <TextView
-        style="@style/CustomTextView"
-        android:id="@+id/livro_totalPaginas"/>
+    <ImageView
+        android:id="@+id/livro_imagem"
+        android:background="#FFFFFF"
+        android:layout_width="@dimen/image_dimen_100dp"
+        android:layout_height="@dimen/image_dimen_160dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/custom_dimen_10dp">
+
+        <TextView
+            android:id="@+id/livro_nome"
+            style="@style/CustomTextView"
+            android:layout_marginBottom="@dimen/custom_dimen_10dp" />
+
+        <TextView
+            android:id="@+id/livro_totalPaginas"
+            style="@style/CustomTextView" />
+
+    </LinearLayout>
 
 </LinearLayout>
