--- a/app/src/main/res/layout/activity_cadastar_livro.xml
+++ b/app/src/main/res/layout/activity_cadastar_livro.xml
@@ -45,6 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:hint="@string/cadastrarLivro_hintTotalPaginas"
+            android:imeOptions="actionDone"
+            android:nextFocusDown="@id/cadastrarLivro_edtTotalDePaginas"
             android:inputType="number" />
 
         <Button
