--- a/app/src/main/res/layout/activity_cadastar_livro.xml
+++ b/app/src/main/res/layout/activity_cadastar_livro.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/custom_dimen_10dp"
+        android:padding="@dimen/custom_dimen_10dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:orientation="vertical">
