--- a/app/src/main/res/layout/activity_cadastrar_lembrete.xml
+++ b/app/src/main/res/layout/activity_cadastrar_lembrete.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_cadastrar_lembrete"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_margin="@dimen/custom_dimen_10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/custom_dimen_10dp">
 
         <TextView
             style="@style/CustomTextView"
@@ -19,8 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/custom_dimen_10dp"
-            android:focusable="false"
             android:clickable="true"
+            android:focusable="false"
             android:inputType="date"
             android:onClick="selecionaData"/>
 
@@ -33,8 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/custom_dimen_10dp"
-            android:focusable="false"
             android:clickable="true"
+            android:focusable="false"
             android:inputType="time"
             android:onClick="selecionaHora">
         </EditText>
@@ -45,6 +46,19 @@
 
         <Spinner
             android:id="@+id/cadastrarLembrete_livro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/custom_dimen_10dp">
+        </Spinner>
+
+
+        <TextView
+            style="@style/CustomTextView"
+            android:layout_marginBottom="@dimen/custom_dimen_10dp"
+            android:text="@string/cadastrarLembrete_txtRepetir"/>
+
+        <Spinner
+            android:id="@+id/cadastrarLembrete_repeticao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/custom_dimen_10dp">
