--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,11 +9,10 @@
     </style>
 
     <!-- Style para os labels para variáveis -->
-    <style name="CustomTextView" parent="TextAppearance.AppCompat.Medium">
+    <style name="CustomTextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
     </style>
-
 </resources>
