--- a/app/src/main/res/layout/activity_lembrete.xml
+++ b/app/src/main/res/layout/activity_lembrete.xml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_lembrete"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.thiagoyf.lembretedeleituradelivros.LembreteActivity">
+    android:layout_height="match_parent">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/custom_dimen_10dp">
+
+        <TextView
+            android:id="@+id/activity_lembrete_data"
+            style="@style/CustomTextView"/>
+
+        <TextView
+            android:id="@+id/activity_lembrete_hora"
+            style="@style/CustomTextView"/>
+
+        <TextView
+            android:id="@+id/activity_lembrete_livro"
+            style="@style/CustomTextView"/>
+
+        <TextView
+            android:id="@+id/activity_lembrete_repete"
+            style="@style/CustomTextView"/>
+
+        <Button
+            android:text="Completar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="completar"/>
+
+    </LinearLayout>
+
+</ScrollView>
